--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,16 +4,20 @@
 }
 
 .header{
-    border: solid gold 3px;    
+    border: solid gold 3px;  
+    background-color: blue;  
 }
 
 .title{
     text-align: center;
     font-size: 60px;
+    background-color: blue;
+    margin-top: 100px;
 }
 
 .header-right{
-    float:right
+    float:right;
+    background-color: blue;
 }
 
 .header-right ul{
@@ -21,17 +25,56 @@
     display: inline-block;
     margin-right: 5px;
     margin-top: 20px;;
+    background-color: blue;
 }
 
 .header-right ul li{
     display: inline-block;
     padding: 5px;
     font-size: 30px;
+    background-color: blue;
     
+}
+
+a{
+    background-color: blue;
 }
 
 img.logo{
     height: 70px;
     margin-left: 10px;
     margin-top: 10px;
+}
+
+img.event-img{
+    height: 200px;
+    width: 200px;
+}
+
+h2{
+    font-size: 30px;
+    margin-top: 100px;
+}
+
+.events{
+    display: flex;
+    flex-wrap:nowrap;
+    background-color: blue;
+    justify-content: space-between;
+}
+
+h3{
+    margin: 10px;
+    background-color: blue;
+}
+
+.my-pic{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+}
+
+p{
+    font-size: 20px;
 }
